# EvidenceSplit

./: .env.example  .gitignore  README.md  agents.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 4b84c533604b_create_analyses_table.py  87933bc3f4ef_create_documents_and_chunks_tables.py  c73a6a535f31_create_evidence_findings_table.py  d8ef625f9c42_create_paper_assessments_table.py  eb5fb664e8c0_create_comparison_reports_table.py  f31d9c5e8a12_allow_abstract_chunks_without_pages.py
backend/src/evidencesplit/: __init__.py  config.py  database.py  main.py
backend/src/evidencesplit/analyses/: demo.py  models.py  pipeline.py  repository.py  results.py  schemas.py  service.py
backend/src/evidencesplit/api/: analyses.py  events.py
backend/src/evidencesplit/discovery/: __init__.py  openalex.py  schemas.py  service.py  unpaywall.py
backend/src/evidencesplit/documents/: chunker.py  downloader.py  models.py  pdf_parser.py  repository.py  service.py
backend/src/evidencesplit/evidence/: aggregator.py  analyzer.py  assessment_repository.py  assessment_schemas.py  models.py  prompts.py  repository.py  schemas.py
backend/src/evidencesplit/providers/: factory.py  gemini_embeddings.py  gemini_evidence.py  gemini_synthesis.py  openrouter_embeddings.py  (+2 more)
backend/tests/: conftest.py
backend/tests/integration/: test_analyses.py
backend/tests/unit/: test_health.py  test_pdf_processing.py  test_pipeline_status.py  test_upload_staging.py
(+22 files in other folders)
