[project]
name = "evidencesplit"
version = "0.1.0"
description = "EvidenceSplit Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

