[project]
name = "evidencesplit"
version = "0.1.0"
description = "EvidenceSplit Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic-settings>=2.9.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "pgvector>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

